add general site info to html

--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+    </header>
+    <section class="link">
+        <p>Download Excursion (Coming soon!)</p>
+    </section>
+    <section class="video">
+        <p>
+        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4">Video not available</video>
+    </p>
+    </section>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <section class="images">
+        <p>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="Camping scene in desert">
+        </p>
+        <p>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Cellphone icon">
+        </p>
+    </section>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <section class="link">
+        <p>Download Excursion (Coming soon!)</p>
+    </section>
+    <footer>
+        <p>&#169 Excursion</p>
+    </footer>
 </body>
 </html>
