--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -10,27 +10,27 @@
     <header>
         <h1>Discover hidden places in the world around you</h1>
     </header>
-    <section class="link">
-        <p>Download Excursion (Coming soon!)</p>
+    <section>
+        <p id="link"><a href="https://6f5c3ed4c1c9476083f9f4af03e7f6a2.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
     </section>
     <section class="video">
         <p>
-        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4">Video not available</video>
+        <video src="resources/video.mov" preload="auto" autoplay loop muted>Video not available</video>
     </p>
     </section>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <section class="images">
         <p>
-            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="Camping scene in desert">
+            <img src="resources/camp.webp" alt="Camping scene in desert">
         </p>
         <p>
-            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Cellphone icon">
+            <img src="resources/phone.webp" alt="Cellphone icon">
         </p>
     </section>
     <h2>Coming Soon for iPhone and Android</h2>
-    <section class="link">
-        <p>Download Excursion (Coming soon!)</p>
+    <section>
+        <p id="link"><a href="https://6f5c3ed4c1c9476083f9f4af03e7f6a2.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
     </section>
     <footer>
         <p>&#169 Excursion</p>
